Третья часть 3 домашнего задания